test/cli/test/deny-modify-platform-label-3/resource.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: my-role-with-platform
rules:
  - apiGroups:
      - ""
    resources:
      - services
    verbs:
      - watch
