test/cli/test/deny-modify-platform-label-3/variables.yaml
policies:
  - name: deny-modify-platform-label
    resources:
      - name: my-role-with-platform
        values:
          request.object.metadata.annotations."hpedevops.net/platform": 'true'
